# ipo

./: .gitignore  CMakeLists.txt  INSTALL  LICENSE  contributors.txt
cmake/: FindExactSCIP.cmake  FindGMP.cmake  FindGMPXX.cmake  FindGTestSources.cmake  FindGUROBI.cmake  FindGhostscript.cmake  FindIPO.cmake  FindRapidXML.cmake  FindSCIP.cmake  FindSoPlex.cmake  FindZIMPL.cmake  IPOConfig.cmake.in
cython/: CMakeLists.txt  IPO.pyx  config.pxi  setup.py.in
doc/: CMakeLists.txt  Doxyfile.in  README.md  license.dox  mainpage.dox.in  namespaces.dox  references.bib  template.h
examples/: facet-lp  facet-lp-submissive  facet-lp.py  failures.py  hypergraph  hypergraph.mat  hypergraph2.mat  matching-dominant.py  one-cubic-matching  one-quad-b-matching
experiments/: trust_region_instances.py
include/ipo/: affine_hull.hpp  arithmetic.hpp  config.hpp.in  constraint.hpp  data.hpp  dominant.hpp  facet.hpp  ipo.hpp  lp.hpp  make_rational_soplex.hpp  mip.hpp  oracles.hpp  oracles_forest.hpp  oracles_gurobi.hpp  oracles_mip.hpp  oracles_polar.hpp  oracles_projection.hpp  oracles_scip.hpp  polyhedron.hpp  projection.hpp  rational.hpp  space.hpp  sparse_vector.hpp  submissive.hpp
ipo/: CMakeLists.txt  affine_hull.cpp  affine_hull.h  cache_oracle.cpp  cache_oracle.h  common-debug.h  common-devel.h  common-minsizerel.h  common-release.h  common.h  common.h.in  console_app.cpp  console_app.h  cpu_timer.cpp  cpu_timer.h  dominant.cpp  dominant.h  exactscip_config.h.in  exactscip_oracle.cpp  exactscip_oracle.h  external_oracle.cpp  external_oracle.h  facets.cpp  facets.h  ipo-debug.h  ipo-devel.h  ipo-minsizerel.h  ipo-relwithdebinfo.h  ipo.h  linear_constraint-pub.h  linear_constraint.cpp  linear_constraint.h  lp.cpp  lp.h  min_norm_2d.cpp  min_norm_2d.h  mip.cpp  mip.h  mip_oracle.cpp  mip_oracle.h  (+59 more)
python/: concorde.py  ipo.py  orthant.py
src/ipo/: affine_complement.hpp  affine_hull.cpp  arithmetic.cpp  constraint.cpp  data.cpp  dominant.cpp  facet.cpp  lp.cpp  lu.cpp  lu.hpp  make_rational_soplex.cpp  mip.cpp  oracles.cpp  oracles_forest.cpp  oracles_gurobi.cpp  oracles_mip.cpp  oracles_polar.cpp  oracles_projection.cpp  oracles_scip.cpp  polyhedron.cpp  projection.cpp  rational.cpp  reconstruct.cpp  reconstruct.hpp  redundancy.hpp  space.cpp  submissive.cpp
src/mip/: gurobi.cpp  inverse.hpp  inverse_gurobi.cpp  inverse_scip.cpp  ipo.hpp  ipo_gurobi.cpp  main.cpp  scip.cpp
test/: CMakeLists.txt  test_affine_complement.cpp  test_data.cpp  test_dominant.cpp  test_lp.cpp  test_lu.cpp  test_oracles_forest.cpp  test_oracles_gurobi.cpp  test_oracles_scip.cpp  test_polar.cpp  test_projection.cpp  test_redundancy.cpp  test_space.cpp  test_submissive.cpp
tools/: CMakeLists.txt  common.cpp  common.h  generic.cpp  ipo.cpp  ipo_dimensions.cpp  ipo_facets.cpp  ipo_smallest_face.cpp  paper_affine_hull.cpp  paper_facets.cpp  paper_lp_relax.cpp  sage_playground.cpp
tools/Wrapper/: IPO.cpp  IPO.pyx  IPOErrors.cpp  IPOErrors.pyx  IPOLinearConstraint.cpp  IPOLinearConstraint.pyx  IPOSage.pyx  IPOScipOracle.cpp  IPOScipOracle.pyx  IPOSpace.cpp  IPOSpace.pyx  IPOVector.cpp  IPOVector.pyx  IPOexact.pyx  OracleController.h  README.txt  ScipOracleController.cpp  ScipOracleController.h  SoplexRational.cpp  SoplexRational.pyx  cppIPO.pxd  cppIPOLinearConstraint.pxd  cppIPOSpace.pxd  cppIPOVector.pxd  cppIPOexact.pxd  cppScipOracle.pxd  cppSoplexRational.pxd  setup.py
tools/Wrapper/CppObjects/: ScipOracleController.cpp  ScipOracleController.h
tools/Wrapper/IPO.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tools/Wrapper/Small Example/: Example.cpp  Example.pyx  Foo.cpp  Foo.h  Foo2.cpp  Foo2.h  cppExample.pxd  setup.py
